--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="../../favicon.ico">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>I want to work for YouNow!</title>
+  <title>GSuss - Social Media and Content Marketing</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -40,140 +40,16 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron first-jumbo">
       <div class="container-fluid first-container">
+        <h1>GSUSS</h1>
+        <h4>Storyteller. Social Media and Content Marketing Consultant.</h4>
       </div>
     </div>
 
-    <div class="jumbotron middle-jumbo">
-      <div class="container-fluid">
-        <h1>Allow me to introduce myself</h1>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="banner">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <h2> Experience </h2>
-        </div>
-      </div>
-    </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-2 col-md-offset-3"><button class="exp" href="#blog" data-toggle="modal"><img class="experience" src="images/blogtvlogo.png"></button></div>
-        <div class="col-md-2 col-md-offset-2"><button class="exp" href="#99designs" data-toggle="modal"><img class="experience" src="images/99designslogo.png"></button></div>
-      </div>
-    </div>
-
-    <div class="banner">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <h2> Vision </h2>
-        </div>
-      </div>
-    </div>
-    </div>
-
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <div class="container-fluid vision">
-            <div class="row">
-              <div class="col-md-2 col-md-offset-2"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-              <div class="col-md-2 col-md-offset-1"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-              <div class="col-md-2 col-md-offset-1"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-            </div>
-          </div>
-        </div>
-        <div class="item blue">
-          <div class="container-fluid vision">
-            <div class="row">
-              <div class="col-md-2 col-md-offset-2"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-              <div class="col-md-2 col-md-offset-1"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-              <div class="col-md-2 col-md-offset-1"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-            </div>
-          </div>
-        </div>
-        <div class="item yellow">
-          <div class="container-fluid vision">
-            <div class="row">
-              <div class="col-md-2 col-md-offset-2"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-              <div class="col-md-2 col-md-offset-1"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-              <div class="col-md-2 col-md-offset-1"><button class="vision3" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="vision2" src="images/discover.png"></button></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <div class="container-fluid">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
+   
 
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; Company 2015</p>
       </footer>
-    </div> <!-- /container -->
-    <div class="modal fade bs-example-modal-lg" id="blog" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          </div>
-          <div class="col-md-2 col-md-offset-3"><button class="exp" href="template/blogtv.html" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="experience" src="images/blogtvlogo.png"></button></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade bs-example-modal-lg" id="99designs" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          </div>
-          <div class="col-md-2 col-md-offset-3"><button class="exp" href="template/blogtv.html" data-toggle="modal" data-target=".bs-example-modal-lg"><img class="experience" src="images/99designslogo.png"></button></div>
-        </div>
-      </div>
-    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
