--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,11 +95,11 @@ body {
 }
 
 h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Akura', sans-serif;
   color: #8bbf53;
 }
 
-h2 {
+h4 {
   font-family: 'Open Sans', sans-serif;
   color: #f4f8ef;
   font-weight: 100;
@@ -163,5 +163,10 @@ img
 .modal-header {
   border-bottom: none;
   padding-bottom: 5px;
+}
+
+@font-face {
+    font-family: "Akura";
+    src: url("/fonts/AkuraPopo.otf") format("opentype");
 }
 
