--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/younowlogo.png"></a>
+          <a class="navbar-brand logo" href="#">GSUSS</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
