--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,29 +19,17 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
     </head>
-    <body>
-     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand logo" href="#">GSUSS</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-
+  <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron first-jumbo">
-      <div class="container-fluid first-container">
-        <h1>GSUSS</h1>
-        <h4>Storyteller. Social Media and Content Marketing Consultant.</h4>
+      <div class="row container">
+        <div class="profile col-md-2">
+          <img src="images/garrettprofile.png">
+        </div>
+        <div class="logo col-md-10">
+          <h1>GSUSS</h1>
+          <h4>Storyteller. Social Media and Content Marketing Consultant.</h4>
+        </div>
       </div>
     </div>
 
