--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
         </div>
         <div class="logo col-md-10">
           <h1>GSUSS</h1>
-          <h4>Storyteller. Social Media and Content Marketing Consultant.</h4>
+          <h4><span id="story">Storyteller</span>. <span id="jobs">Social Media</span> and <span id="jobs">Content Marketing</span> Consultant.</h4>
         </div>
       </div>
     </div>
