--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
+  <script src="//load.sumome.com/" data-sumo-site-id="850728b531e65fa7dd6a8aaa51b275af08ce42ff359f51149690a6ff8b829c53" async="async"></script>
     </head>
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
