--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,19 +22,28 @@
     </head>
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron first-jumbo">
-      <div class="row container">
-        <div class="profile col-md-2">
+    <div class="container">
+      <div class="row">
+        <div class="profile col-md-4">
           <img src="images/garrettprofile.png">
         </div>
-        <div class="logo col-md-10">
+        <div class="logo col-md-4">
           <h1>GSUSS</h1>
           <h4><span id="story">Storyteller</span>. <span id="jobs">Social Media</span> and <span id="jobs">Content Marketing</span> Consultant.</h4>
         </div>
       </div>
     </div>
 
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-68023417-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
